package com.example.esp32cam_server.dto;

public class PhotoUpdateDTO {
    private String description;

    public String getDescription() {
        return description;
    }

    public void setDescription(String description) {
        this.description = description;
    }
}
